Improve code style (20240909)