@@ -4,7 +4,7 @@ import entity.*;
 
 import java.util.ArrayList;
 
-public class Find_TopK_A {
+public class FindTopK_A_db {
     public static int num_LJ1 = 0;//路线剪枝1
     public static int num_LJ2 = 0;//路线剪枝2
     public static int num_LJ3 = 0;
@@ -24,13 +24,10 @@ public class Find_TopK_A {
             for (ArrayList<Integer> integers : path2) {
                 for (int j = 0; j < path1.get(k + 1).size(); j++) {
                     path.add(new ArrayList<>());
-
                     for (Integer integer : integers) {
                         path.get(num).add(integer);
-                        //path.get(num).add(path2.size(), 1);
                     }
                     path.get(num).add(path1.get(k + 1).get(j));
-
                     num++;
                 }
             }
@@ -42,38 +39,13 @@ public class Find_TopK_A {
         return path2;
     }
 
-    //计算多个数的全排列
-    public static ArrayList<ArrayList<Integer>> allsort(int[] a, ArrayList<ArrayList<Integer>> order, int currentlocal) // currentlocal当前指向的位置
-    {
-        if (currentlocal == a.length - 1) // 当当前位置指到最后一个元素时，该元素后面已经没有其他元素可以跟他交换位置，即已产生一个组合数
-        {
-            order.add(new ArrayList<>());
-            for (int number : a) {
-                order.getLast().add(number);
-            }
-            // System.out.println();
-        } else {
-            for (int i = currentlocal; i < a.length; i++) {
-                int temp = a[i];
-                a[i] = a[currentlocal];
-                a[currentlocal] = temp;
-
-                order = allsort(a, order, currentlocal + 1);//交换两个元素的位置后，对其后面的元素全排列
-
-                temp = a[i];   //两个元素交换位置后重新恢复原位
-                a[i] = a[currentlocal];
-                a[currentlocal] = temp;
-
-            }
-        }
-        return order;
-    }
-
     public static ArrayList<ArrayList<ArrayList<Integer>>> Find_Path2(ArrayList<ArrayList<Integer>> path, int[] Poi_Type, Poi[] PoiList, ArrayList<ArrayList<Integer>> all,
                                                                       int q) {
         ArrayList<ArrayList<ArrayList<Integer>>> find_Path = new ArrayList<>();
         ArrayList<Integer> x = new ArrayList<>();
         ArrayList<Integer> y = new ArrayList<>();
+        boolean flag_x;
+        boolean flag_y;
         ArrayList<ArrayList<Integer>> path3 = new ArrayList<>();
         for (int i = 0; i < Poi_Type.length; i++) {
             path3.add(new ArrayList<>());
@@ -85,31 +57,61 @@ public class Find_TopK_A {
             //判断这几个点桐樱岛x轴和y轴的顺序是不是一致
             x = Find_xy(integers, PoiList, 0);
             y = Find_xy(integers, PoiList, 1);
-
+            //判断x顺序和y顺序是否一致
+            flag_x = true;
+            flag_y = true;
             for (int j = 0; j < x.size(); j++) {
                 if (x.get(j) != y.get(j)) {
+                    flag_x = false;
                     break;
                 }
             }
             for (int j = 0; j < x.size(); j++) {
                 if (x.get(j) != y.get(y.size() - 1 - j)) {
+                    flag_y = false;
                     break;
                 }
             }
+            if (flag_x || flag_y) {
+                find_Path.getLast().add(new ArrayList<>());
+                find_Path.getLast().getLast().add(q);
+                if (flag_x) {
+                    if (PoiList[q].x > PoiList[x.getFirst()].x) { //q在最右边
+                        for (int j = x.size() - 1; j < 0; j--) {
+                            find_Path.getLast().getLast().add(x.get(j));
+                        }
+                    } else { //q在最左边
+                        for (int j = 0; j < x.size() - 1; j++) {
+                            find_Path.getLast().getLast().add(x.get(j));
+                        }
+                    }
+                } else {
+                    if (PoiList[q].x > PoiList[x.getFirst()].x) { //q在最右边
+                        for (int j = x.size() - 1; j < 0; j--) {
+                            find_Path.getLast().getLast().add(y.get(j));
+                        }
+                    } else { //q在最左边
+                        for (int j = 0; j < x.size() - 1; j++) {
+                            find_Path.getLast().getLast().add(y.get(j));
+                        }
+                    }
+                }
+            } else {
+                for (int j = 0; j < path3.size(); j++) {
+                    path3.get(j).clear();
+                    path3.get(j).add(integers.get(j));
+                }
+                find_Path.getLast().addAll(Finf_Path1(all, path3, Poi_Type, q));
+                ArrayList<Integer> path22 = new ArrayList<>();
+                for (int j = 0; j < find_Path.getLast().size(); j++) {
+                    path22.clear();
+                    path22.addAll(find_Path.getLast().get(j));
+                    find_Path.getLast().get(j).clear();
+                    find_Path.getLast().get(j).add(q);
+                    find_Path.getLast().get(j).addAll(path22);
+                }
+            }
 
-            for (int j = 0; j < path3.size(); j++) {
-                path3.get(j).clear();
-                path3.get(j).add(integers.get(j));
-            }
-            find_Path.getLast().addAll(FindPath1(all, path3, Poi_Type, q));
-            ArrayList<Integer> path22 = new ArrayList<>();
-            for (int j = 0; j < find_Path.getLast().size(); j++) {
-                path22.clear();
-                path22.addAll(find_Path.getLast().get(j));
-                find_Path.getLast().get(j).clear();
-                find_Path.getLast().get(j).add(q);
-                find_Path.getLast().get(j).addAll(path22);
-            }
         }
         int num4 = 0;
         for (ArrayList<ArrayList<Integer>> arrayLists : find_Path) {
@@ -117,6 +119,7 @@ public class Find_TopK_A {
                 num4 = num4 + arrayLists.size();
             }
         }
+        //num_LJ5 += num4;
         num_LJ2 = num_LJ2 + (num_LJ3 - num4);
 
         return find_Path;
@@ -159,14 +162,15 @@ public class Find_TopK_A {
         return Find_xy;
     }
 
-    public static ArrayList<ArrayList<Integer>> FindPath1(ArrayList<ArrayList<Integer>> all,
-                                                          ArrayList<ArrayList<Integer>> path3, int[] Poi_Type, int q) {
+    public static ArrayList<ArrayList<Integer>> Finf_Path1(ArrayList<ArrayList<Integer>> all,
+                                                           ArrayList<ArrayList<Integer>> path3, int[] Poi_Type, int q) {
         ArrayList<ArrayList<Integer>> path = new ArrayList<>();
         for (ArrayList<Integer> integers : all) {
             //找到q所在子图中所有的符合要求的poi
             ArrayList<ArrayList<Integer>> path1 = new ArrayList<>();
             for (int i = 0; i < Poi_Type.length; i++) {
                 path1.add(new ArrayList<>());
+                // path1.get(i).add(q);
             }
             for (int i = 0; i < Poi_Type.length; i++) {
                 path1.get(i).addAll(path3.get(integers.get(i)));
@@ -183,9 +187,11 @@ public class Find_TopK_A {
 
     }
 
-    public ArrayList<LowerBound> TopK(Graph g, int q, int q_SG, int k, int[] Poi_Type, ArrayList<ArrayList<Integer>> SG, ArrayList<ArrayList<Path>> List, Poi[] PoiList,
-                                      double a, ArrayList<ArrayList<PoiPath>> BPList, ArrayList<ArrayList<Integer>> PointMinBP) {
+    public void Top_k_db(Graph g, int q, int q_SG, int k, int[] Poi_Type, ArrayList<ArrayList<Integer>> SG, ArrayList<ArrayList<Path>> List, Poi[] PoiList,
+                         double a, ArrayList<ArrayList<PoiPath>> BPList, ArrayList<ArrayList<Integer>> PointMinBP) {
         //找到查询点q所在的子图
+        boolean flag1 = false;
+        //int q_SG = 0;
         int[] SG_num = new int[SG.size()]; //判断这个子图是否已经被搜索过
 
         int[] a2 = new int[Poi_Type.length];
@@ -195,15 +201,17 @@ public class Find_TopK_A {
 
         //获得这些数字的全排列
         ArrayList<ArrayList<Integer>> order1 = new ArrayList<>();
-        ArrayList<ArrayList<Integer>> all = allsort(a2, order1, 0);
+        ArrayList<ArrayList<Integer>> all = new ArrayList<>();
         ArrayList<ArrayList<Integer>> all1 = new ArrayList<>();
         ArrayList<ArrayList<ArrayList<Integer>>> path;
         ArrayList<ArrayList<Integer>> path2;
         ArrayList<ArrayList<Integer>> path3 = new ArrayList<>();
-
+        boolean flag12 = true;
         all1.add(new ArrayList<>());
+        all.add(new ArrayList<>());
         for (int i = 0; i < Poi_Type.length; i++) {
             all1.getFirst().add(i);
+            all.getFirst().add(i);
         }
         //将q_SG中的Poi加入path3
         for (int i = 0; i < Poi_Type.length; i++) {
@@ -218,6 +226,7 @@ public class Find_TopK_A {
                 NoType.add(l);//
                 num44++;
                 flag4 = false;
+                //break;
             }
         }
         if (!flag4) {
@@ -228,7 +237,7 @@ public class Find_TopK_A {
                 for (ArrayList<Integer> integers : SG) {
                     flag6 = false;
                     for (Integer integer : integers) {
-                        if (PoiList[integer].Poi_Type == Poi_Type[NoType.get(num55)]) {
+                        if (PoiList[integer].poiType == Poi_Type[NoType.get(num55)]) {
                             path3.get(NoType.get(num55)).add(integer);
                             num55++;
                             num44--;
@@ -254,8 +263,10 @@ public class Find_TopK_A {
         num_LJ3 = num45 * all.size();
         int q_BP = PointMinBP.get(q).get(0);
         int Min_w = PointMinBP.get(q).get(1);
-        path2 = FindPath1(all1, path3, Poi_Type, q);
-
+        ArrayList<Integer> q_BP_Path = new ArrayList<>();
+        path2 = Finf_Path1(all1, path3, Poi_Type, q);
+//        Find_Path2(ArrayList<ArrayList<Integer>> path,int[] Poi_Type,Poi[] PoiList,ArrayList<ArrayList<Integer>> all,
+//        int q){
         startTime1 = System.currentTimeMillis();
         path = Find_Path2(path2, Poi_Type, PoiList, all, q);
         //从这些路径中选出k条q到第一节点最短的路径
@@ -263,21 +274,23 @@ public class Find_TopK_A {
         //ArrayList<ArrayList<Integer>> path_k = Find_path_k(q,path, k, q_SG,PoiList, List,PointMinBP,BPList);
         endTime1 = System.currentTimeMillis();
         time11 = time11 + endTime1 - startTime1;
+        // startTime1 = System.currentTimeMillis();
         startTime1 = System.currentTimeMillis();
-        ArrayList<LowerBound> allPath = FindAllPath(path, List, PoiList, a, q_BP, Min_w, BPList, PointMinBP, k);
+        ArrayList<LowerBound> allPath = Find_allPath(path, List, PoiList, a, q_BP, Min_w, BPList, PointMinBP, k);
         endTime1 = System.currentTimeMillis();
         time33 = time33 + endTime1 - startTime1;
 
-        ArrayList<LowerBound> Top_k = Find_Top_k(allPath, k);
-        double LB = Find_LB(Top_k);
+        ArrayList<LowerBound> topK = Find_Top_k(allPath, k);
+        double LB = Find_LB(topK);
         //找到W_max
         int w_max = 0;
+        int w1 = 0;
         int w1_Num;
-        for (int value : Poi_Type) {
+        for (int i1 : Poi_Type) {
             w1_Num = 0;
             for (Poi poi : PoiList) {
-                if (poi.Poi_Type == value && poi.Poi_Num > w1_Num) {
-                    w1_Num = poi.Poi_Num;
+                if (poi.poiType == i1 && poi.poiNum > w1_Num) {
+                    w1_Num = poi.poiNum;
                 }
             }
             w_max = w_max + w1_Num;
@@ -290,23 +303,24 @@ public class Find_TopK_A {
         int m = (int) Math.sqrt(SG.size());
         SG_n.add(q_SG);
         int n;
+        boolean flag = true;
 
         //网格剪枝
+        int num22 = 0;
         int n5; //用来标记这次循环需要检查多少个图
-        int n6;
+        int n6 = 0;
         int n7 = 0;
         ArrayList<SGPoi> NoPoi = new ArrayList<>();
         ArrayList<Integer> NOPoi_Num = new ArrayList<>();
-
         while (true) {
             ArrayList<Integer> SG3 = new ArrayList<>();
             n2 = 0;//用来存放应该加入SG_n的子图编号
             n5 = 0;
             n6 = 0;
-            for (Integer integer : SG_n) {
+            for (Integer element : SG_n) {
                 // System.out.println("w_max="+w_max+",LB="+LB);
                 R = ((1 - a) * w_max - LB) / a;
-                n = integer;
+                n = element;
                 int[] n1 = {n - m + 1, n - m, n - m - 1, n - 1, n + 1, n + m - 1, n + m, n + m + 1};
                 ArrayList<SGPoi> SGPoi = new ArrayList<>();
                 //计算这个子图中所有符合条件的Poi
@@ -326,23 +340,26 @@ public class Find_TopK_A {
                         }
                     }
                 }
-                for (Find_TopK_A.SGPoi sgPoi : SGPoi) {
-                    SG3.add(sgPoi.num);
+                for (FindTopK_A_db.SGPoi item : SGPoi) {
+                    SG3.add(item.num);
                 }
+
+                int n3 = 0;//用来记录SG编号
+
                 //寻找周围几个子图中每个边界顶点的最短路径
                 boolean flag3;
 
-                for (Find_TopK_A.SGPoi sgPoi : SGPoi) {//判断这个子图周围的n个子图是否符合条件
+                for (FindTopK_A_db.SGPoi poi : SGPoi) {//判断这个子图周围的n个子图是否符合条件
                     //将NoPoi中的Poi加入SGPoi
-                    n = sgPoi.num;
+                    n = poi.num;
                     int[] n22 = {n - m + 1, n - m, n - m - 1, n - 1, n + 1, n + m - 1, n + m, n + m + 1};
-                    for (int i : n22) { //只添加SGPoi.get(j)子图周围八个子图中的Poi
-                        if (i < SG.size() && i > 0) {
+                    for (int value : n22) { //只添加SGPoi.get(j)子图周围八个子图中的Poi
+                        if (value < SG.size() && value > 0) {
                             //System.out.println("开始添加SGPoi.get(j)子图周围八个子图中的Poi");
-                            for (Find_TopK_A.SGPoi poi : NoPoi) {
-                                if (poi.num == i) {
+                            for (FindTopK_A_db.SGPoi sgPoi : NoPoi) {
+                                if (sgPoi.num == value) {
                                     for (int p = 0; p < Poi_Type.length; p++) {
-                                        sgPoi.Poi.get(p).addAll(poi.Poi.get(p));
+                                        poi.Poi.get(p).addAll(sgPoi.Poi.get(p));
                                     }
                                 }
                             }
@@ -350,11 +367,12 @@ public class Find_TopK_A {
                     }
 
                     //System.out.println("判断这个子图周围的n个子图是否符合条件");
-                    if (SG_num[sgPoi.num] >= 0) {
+                    if (SG_num[poi.num] >= 0) {
                         flag3 = true;
-                        for (int l = 0; l < sgPoi.Poi.size(); l++) {//判断这个子图是否有全部的兴趣点
-                            if (sgPoi.Poi.get(l).isEmpty()) {
+                        for (int l = 0; l < poi.Poi.size(); l++) {//判断这个子图是否有全部的兴趣点
+                            if (poi.Poi.get(l).isEmpty()) {
                                 flag3 = false;
+                                //break;
                                 break;
                             }
                         }
@@ -363,49 +381,50 @@ public class Find_TopK_A {
                         if (flag3) {
                             NoPoi.clear();
                             //如果有，查找q到这个子图的最短路径
-                            NOPoi_Num.add(sgPoi.num);
+                            NOPoi_Num.add(poi.num);
                             q_TargetSG_w = Integer.MAX_VALUE;
-                            for (Integer value : NOPoi_Num) {
-                                if (BPList.get(q_BP).get(value).distance < q_TargetSG_w) {
-                                    q_TargetSG_w = BPList.get(q_BP).get(value).distance;
+                            for (Integer integer : NOPoi_Num) {
+                                if (BPList.get(q_BP).get(integer).distance < q_TargetSG_w) {
+                                    q_TargetSG_w = BPList.get(q_BP).get(integer).distance;
                                 }
                             }
                             NOPoi_Num.clear();
 
-                            SG_num[sgPoi.num] = 1;
+                            SG_num[poi.num] = 1;
                             int min = q_TargetSG_w + Min_w; //找到这些路径中最短的一条
                             //System.out.println("min="+min+",R="+R);
                             n7++;
                             if (min > (int) R) { //网格剪枝
-                                SG_num[sgPoi.num] = 2;
+                                SG_num[poi.num] = 2;
+                                num22++;
                                 n2++;
                                 n6++;
+                                continue;
                             } else {
                                 num45 = 1;
-                                for (int l = 0; l < sgPoi.Poi.size(); l++) {
-                                    if (!sgPoi.Poi.get(l).isEmpty()) {
-                                        num45 = num45 * sgPoi.Poi.get(l).size();
+                                for (int l = 0; l < poi.Poi.size(); l++) {
+                                    if (!poi.Poi.get(l).isEmpty()) {
+                                        num45 = num45 * poi.Poi.get(l).size();
                                     }
                                 }
                                 num_LJ1 = num_LJ1 + num45 * all.size();
                                 num_LJ3 = num45 * all.size();
-                                ArrayList<ArrayList<Integer>> path8 = FindPath1(all1, sgPoi.Poi, Poi_Type, q);
+                                ArrayList<ArrayList<Integer>> path8 = Finf_Path1(all1, poi.Poi, Poi_Type, q);
                                 startTime1 = System.currentTimeMillis();
                                 ArrayList<ArrayList<ArrayList<Integer>>> path7 = Find_Path2(path8, Poi_Type, PoiList, all, q);
                                 endTime1 = System.currentTimeMillis();
                                 time11 = time11 + endTime1 - startTime1;
+                                //startTime1 = System.currentTimeMillis();
                                 int num33;
-                                for (int l = 0; l < sgPoi.Poi.size(); l++) {
+                                for (int l = 0; l < poi.Poi.size(); l++) {
                                     num33 = 0;
-                                    for (int o = 0; o < sgPoi.Poi.get(l).size(); o++) {
-                                        num33 = num33 + sgPoi.Poi.get(l).size();
+                                    for (int o = 0; o < poi.Poi.get(l).size(); o++) {
+                                        num33 = num33 + poi.Poi.get(l).size();
                                     }
                                     //System.out.println("第"+l+"个Poi_Type的个数为:"+num33);
                                 }
-                                //path_k = Find_path_k(q,path7, k, q_SG,PoiList, List,PointMinBP,BPList);
-
                                 startTime1 = System.currentTimeMillis();
-                                ArrayList<LowerBound> allPath4 = FindAllPath(path7, List, PoiList, a, q_BP, Min_w, BPList, PointMinBP, k);
+                                ArrayList<LowerBound> allPath4 = Find_allPath(path7, List, PoiList, a, q_BP, Min_w, BPList, PointMinBP, k);
                                 endTime1 = System.currentTimeMillis();
                                 time33 = time33 + endTime1 - startTime1;
 
@@ -414,48 +433,50 @@ public class Find_TopK_A {
 
                                 int top_min;
                                 //修改Top_k
-//                                System.out.println("网格剪枝阶段计算全部路径所用时间为："+time2);
 
-                                if (Top_k.size() < k) {
+                                if (topK.size() < k) {
                                     boolean flag99;
-                                    for (LowerBound lowerBound : Top_k4) {
+                                    for (LowerBound bound : Top_k4) {
                                         flag99 = true;
-                                        for (LowerBound bound : Top_k) {
-                                            if (lowerBound.score == bound.score) {
+                                        for (LowerBound lowerBound : topK) {
+                                            if (bound.score == lowerBound.score) {
                                                 flag99 = false;
                                                 break;
                                             }
                                         }
                                         if (flag99) {
-                                            Top_k.add(lowerBound);
+                                            topK.add(bound);
                                         }
                                     }
                                 } else {
                                     for (LowerBound lowerBound : Top_k4) {
-                                        top_min = Find_LB_Num(Top_k);
-                                        if (lowerBound.score > Top_k.get(top_min).score && lowerBound.score < Double.MAX_VALUE) {
-                                            Top_k.remove(top_min);
-                                            Top_k.add(lowerBound);
+                                        top_min = Find_LB_Num(topK);
+                                        if (lowerBound.score > topK.get(top_min).score && lowerBound.score < Double.MAX_VALUE) {
+                                            topK.remove(top_min);
+                                            topK.add(lowerBound);
                                         }
                                     }
                                 }
                                 // System.out.println("Top_K中含有的路径数目为："+Top_k.size());
                                 //修改LB
-                                LB = Find_LB(Top_k);
+                                LB = Find_LB(topK);
                                 //System.out.println("1");
                             }
                             // System.out.println("1");
                         } else {
                             NoPoi.add(new SGPoi());
-                            NoPoi.getLast().Poi.addAll(sgPoi.Poi);
+                            NoPoi.getLast().Poi.addAll(poi.Poi);
 
-                            NOPoi_Num.add(sgPoi.num);
+                            NOPoi_Num.add(poi.num);
                             //System.out.println("这个图不符合要求,加入NOPoi,目前NOPoi中的子图为："+NOPoi_Num);
                             n2++;
                         }
+                    } else {
+                        continue;
                     }
+
                 }
-                SG_num[integer] = 1;
+                SG_num[element] = 1;
             }
             //System.out.println("n2="+n2);
             //判断是否需要推出循环
@@ -479,30 +500,27 @@ public class Find_TopK_A {
             SG_n.addAll(SG3);
             SG3.clear();
         }
+        //System.out.println("1");
         //计算多少个子图被计算过
         int num12 = 0;
+        //int num22 = 0;
         for (int j : SG_num) {
             if (j > 0) {
                 num12++;
             }
         }
-        System.out.println("A算法(只进行网格剪枝优化)一共划分了" + SG_num.length + "个子图，其中计算了" + n7 + "个子图,网格剪枝了" + n6 + "个子图");
+
         double num17 = num_LJ2 + num_LJ4;
         double num18 = num_LJ1;
         double BL = num17 / num18;
-        System.out.println("A算法(只进行网格剪枝优化)一共进行的路线查找次数" + num_LJ1 + ",总剪枝的路线的数目为：" + (num_LJ2 + num_LJ4) + ",剪枝效率为：" + BL +
+        System.out.println("A对比算法(Poi顺序固定)一共划分了" + SG_num.length + "个子图，其中计算了" + n7 + "个子图,网格剪枝了" + n6 + "个子图");
+        System.out.println("A对比算法(Poi顺序固定)一共进行的路线查找次数" + num_LJ1 + ",总剪枝的路线的数目为：" + (num_LJ2 + num_LJ4) + ",剪枝效率为：" + BL +
                 ",其中第一阶段剪枝的路线为：" + num_LJ2 + ",第二阶段剪枝的路线为：" + num_LJ4);
         System.out.println("第一阶段剪枝消耗的时间为" + time11 + ",第二阶段剪枝消耗的时间为：" + time33);
-//        System.out.print("A找到的最优路径的score为：");
-//        for (int i = 0; i < Top_k.size(); i++) {
-//            System.out.print(Top_k.get(i).score);
-//            System.out.print(", ");
-//        }
-        return Top_k;
     }
 
-    public ArrayList<LowerBound> FindAllPath(ArrayList<ArrayList<ArrayList<Integer>>> path, ArrayList<ArrayList<Path>> List, Poi[] PoiList, double a,
-                                             int q_BP, int w_BP, ArrayList<ArrayList<PoiPath>> BPList, ArrayList<ArrayList<Integer>> PointList, int k) {
+    public ArrayList<LowerBound> Find_allPath(ArrayList<ArrayList<ArrayList<Integer>>> path, ArrayList<ArrayList<Path>> List, Poi[] PoiList, double a,
+                                              int q_BP, int w_BP, ArrayList<ArrayList<PoiPath>> BPList, ArrayList<ArrayList<Integer>> PointList, int k) {
         ArrayList<LowerBound> LB = new ArrayList<>();
         int w;
         int num = 0;
@@ -510,6 +528,13 @@ public class Find_TopK_A {
         double score1 = 0;
         int q_BP1;
         int w_BP1;
+        System.currentTimeMillis();
+        long startTime2; //开始获取时间
+        System.currentTimeMillis();
+        long endTime2; //开始获取时间
+        long time2 = 0;
+        long time3 = 0;
+        long time4 = 0;
         long time5 = 0;
         long time6 = 0;
         ArrayList<Integer> path_q2 = new ArrayList<>();
@@ -523,7 +548,7 @@ public class Find_TopK_A {
             for (ArrayList<Integer> arrayList : arrayLists) {
                 Poi_NUM = 0;
                 for (int j = 1; j < arrayList.size(); j++) {
-                    Poi_NUM += PoiList[arrayList.get(j)].Poi_Num;
+                    Poi_NUM += PoiList[arrayList.get(j)].poiNum;
                 }
                 //计算这种组合形式的欧式距离
 
@@ -554,7 +579,7 @@ public class Find_TopK_A {
                     q_index1 = arrayList.get(j + 1);
                     q_BP1 = PointList.get(q_index).get(0);
                     w_BP1 = PointList.get(q_index).get(1);
-                    if (PoiList[q_index].SG == PoiList[q_index1].SG) {
+                    if (PoiList[q_index].subgraphId == PoiList[q_index1].subgraphId) {
                         for (int k1 = 0; k1 < List.get(q_index).size(); k1++) {
                             if (List.get(q_index).get(k1).end == q_index1) {
                                 w = w + List.get(q_index).get(k1).weight;
@@ -563,10 +588,10 @@ public class Find_TopK_A {
                         }
                     } else {
                         if (q_BP1 != Integer.MAX_VALUE) {
-                            w = w + w_BP1 + BPList.get(q_BP1).get(PoiList[q_index1].SG).distance;
-                            for (int k1 = 0; k1 < List.get(BPList.get(q_BP1).get(PoiList[q_index1].SG).target).size(); k1++) {
-                                if (List.get(BPList.get(q_BP1).get(PoiList[q_index1].SG).target).get(k1).end == q_index1) {
-                                    w = w + List.get(BPList.get(q_BP1).get(PoiList[q_index1].SG).target).get(k1).weight;
+                            w = w + w_BP1 + BPList.get(q_BP1).get(PoiList[q_index1].subgraphId).distance;
+                            for (int k1 = 0; k1 < List.get(BPList.get(q_BP1).get(PoiList[q_index1].subgraphId).target).size(); k1++) {
+                                if (List.get(BPList.get(q_BP1).get(PoiList[q_index1].subgraphId).target).get(k1).end == q_index1) {
+                                    w = w + List.get(BPList.get(q_BP1).get(PoiList[q_index1].subgraphId).target).get(k1).weight;
                                     break;
                                 }
                             }
@@ -576,6 +601,7 @@ public class Find_TopK_A {
                     }
                 }
                 //计算这组poi的路径长度w
+                startTime2 = System.currentTimeMillis();
                 LowerBound nn = new LowerBound();
                 if (LB.size() < k) {
                     LB.add(new LowerBound());
@@ -584,10 +610,11 @@ public class Find_TopK_A {
                     LB.getLast().dis = w;
                     for (int kk = 0; kk < LB.getLast().path.size(); kk++) {
                         //LB.get(num).w_poi += PoiList[LB.get(num).path.get(k)].Poi_Num;
-                        LB.getLast().totalInterest += PoiList[arrayList.get(kk)].Poi_Num;
+                        LB.getLast().totalInterest += PoiList[arrayList.get(kk)].poiNum;
                     }
                     LB.getLast().score = (-a) * LB.getLast().dis + (1 - a) * LB.getLast().totalInterest;
                 } else {
+                    startTime2 = System.currentTimeMillis();
                     score_Min = LB.get(Find_LB_Num(LB)).score;
 
                     nn.path.clear();
@@ -601,9 +628,17 @@ public class Find_TopK_A {
                         LB.get(Find_LB_Num(LB)).score = nn.score;
                         LB.get(Find_LB_Num(LB)).totalInterest = nn.totalInterest;
                     }
+                    endTime2 = System.currentTimeMillis();
+                    time6 = endTime2 - startTime2 + time6;
                 }
+
+                endTime2 = System.currentTimeMillis();
+                time5 = endTime2 - startTime2 + time5;
                 num++;
+
             }
+
+
         }
         return LB;
     }
@@ -611,15 +646,15 @@ public class Find_TopK_A {
     public ArrayList<LowerBound> Find_Top_k(ArrayList<LowerBound> a, int k) {
         ArrayList<LowerBound> top_k = new ArrayList<>();
         int n;
-        for (LowerBound lowerBound : a) {
-            if (top_k.size() < k && lowerBound.dis != 0) {
-                top_k.add(lowerBound);
+        for (int i = 0; i < a.size(); i++) {
+            if (top_k.size() < k && a.get(i).dis != 0) {
+                top_k.add(a.get(i));
             } else {
                 if (!top_k.isEmpty()) {
                     n = Find_LB_Num(top_k);
-                    if (lowerBound.score > top_k.get(n).score && lowerBound.dis != 0) {
+                    if (a.get(i).score > top_k.get(n).score && a.get(i).dis != 0) {
                         top_k.remove(n);
-                        top_k.add(lowerBound);
+                        top_k.add(a.get(i));
                     }
                 }
 
@@ -628,10 +663,10 @@ public class Find_TopK_A {
         return top_k;
     }
 
-    public double Find_LB(ArrayList<LowerBound> Top_k) {
+    public double Find_LB(ArrayList<LowerBound> topK) {
         //int LB = 0;
         double LB_score = Double.MAX_VALUE;
-        for (LowerBound lowerBound : Top_k) {
+        for (LowerBound lowerBound : topK) {
             if (LB_score > lowerBound.score) {
                 LB_score = lowerBound.score;
                 //LB = i;
@@ -641,12 +676,12 @@ public class Find_TopK_A {
         return LB_score;
     }
 
-    public int Find_LB_Num(ArrayList<LowerBound> Top_k) {
+    public int Find_LB_Num(ArrayList<LowerBound> topK) {
         int LB = 0;
         double LB_score = Double.MAX_VALUE;
-        for (int i = 0; i < Top_k.size(); i++) {
-            if (LB_score > Top_k.get(i).score) {
-                LB_score = Top_k.get(i).score;
+        for (int i = 0; i < topK.size(); i++) {
+            if (LB_score > topK.get(i).score) {
+                LB_score = topK.get(i).score;
                 LB = i;
             }
 
@@ -654,12 +689,12 @@ public class Find_TopK_A {
         return LB;
     }
 
-    public int Find_LB_Num_Min(ArrayList<LowerBound> Top_k) {
+    public int Find_LB_Num_Min(ArrayList<LowerBound> topK) {
         int LB = 0;
         double LB_score = Double.MAX_VALUE;
-        for (int i = 0; i < Top_k.size(); i++) {
-            if (LB_score < Top_k.get(i).score) {
-                LB_score = Top_k.get(i).score;
+        for (int i = 0; i < topK.size(); i++) {
+            if (LB_score < topK.get(i).score) {
+                LB_score = topK.get(i).score;
                 LB = i;
             }
 
@@ -669,10 +704,11 @@ public class Find_TopK_A {
 
     public void Add_PoiAsSG(ArrayList<ArrayList<Integer>> path3, int[] Poi_Type, ArrayList<ArrayList<Integer>> SG,
                             Poi[] PoiList, ArrayList<ArrayList<Integer>> all, int q_SG) {
+        boolean flag12 = true;
         for (int i = 0; i < SG.get(q_SG).size(); i++) {
-            if (PoiList[SG.get(q_SG).get(i)].Poi_Type != 0) {
+            if (PoiList[SG.get(q_SG).get(i)].poiType != 0) {
                 for (int j = 0; j < Poi_Type.length; j++) {
-                    if (PoiList[SG.get(q_SG).get(i)].Poi_Type == Poi_Type[j]) {
+                    if (PoiList[SG.get(q_SG).get(i)].poiType == Poi_Type[j]) {
                         path3.get(j).add(SG.get(q_SG).get(i));
                     }
                 }
@@ -685,16 +721,16 @@ public class Find_TopK_A {
         num_LJ1 += path.size();
         ArrayList<ArrayList<Integer>> path_k = new ArrayList<>();
         ArrayList<Integer> path1 = new ArrayList<>();
-        int w1;
-        int w_max;
+        int w1 = 0;
+        int w_max = 0;
         int num = 0;
-        for (ArrayList<Integer> integers : path) {
+        for (ArrayList<Integer> integerArrayList : path) {
             if (path_k.size() < k) {
-                path_k.add(new ArrayList<>());
-                path_k.getLast().addAll(integers);
-                if (q_SG == PoiList[integers.getFirst()].SG) { //如果在同一个子图中
+                path_k.add(new ArrayList<Integer>());
+                path_k.getLast().addAll(integerArrayList);
+                if (q_SG == PoiList[integerArrayList.getFirst()].subgraphId) { //如果在同一个子图中
                     for (int j = 0; j < List.get(q).size(); j++) {
-                        if (List.get(q).get(j).end == integers.getFirst()) {
+                        if (List.get(q).get(j).end == integerArrayList.getFirst()) {
                             path_k.getLast().add(List.get(q).get(j).weight);
                             break;
                         }
@@ -702,8 +738,8 @@ public class Find_TopK_A {
                 } else {
                     w1 = 0;
                     w1 += PointMinBP.get(q).get(1);
-                    w1 += BPList.get(PointMinBP.get(q).get(0)).get(PoiList[integers.getFirst()].SG).distance;
-                    w1 += PointMinBP.get(integers.getFirst()).get(1);
+                    w1 += BPList.get(PointMinBP.get(q).get(0)).get(PoiList[integerArrayList.getFirst()].subgraphId).distance;
+                    w1 += PointMinBP.get(integerArrayList.getFirst()).get(1);
                     path_k.getLast().add(w1);
                 }
             } else {
@@ -720,9 +756,9 @@ public class Find_TopK_A {
                 time22 = time22 + endTime1 - startTime1;
                 //判断查询点和第一个顶点是否在同一个子图中
                 w1 = 0;
-                if (q_SG == PoiList[integers.getFirst()].SG) { //如果在同一个子图中
+                if (q_SG == PoiList[integerArrayList.getFirst()].subgraphId) { //如果在同一个子图中
                     for (int j = 0; j < List.get(q).size(); j++) {
-                        if (List.get(q).get(j).end == integers.getFirst()) {
+                        if (List.get(q).get(j).end == integerArrayList.getFirst()) {
                             w1 = List.get(q).get(j).weight;
                             //path_k.get(path_k.size()-1).add(List.get(q).get(j).w);
                             break;
@@ -731,13 +767,13 @@ public class Find_TopK_A {
 
                 } else {
                     w1 += PointMinBP.get(q).get(1);
-                    w1 += BPList.get(PointMinBP.get(q).get(0)).get(PoiList[integers.getFirst()].SG).distance;
-                    w1 += PointMinBP.get(integers.getFirst()).get(1);
+                    w1 += BPList.get(PointMinBP.get(q).get(0)).get(PoiList[integerArrayList.getFirst()].subgraphId).distance;
+                    w1 += PointMinBP.get(integerArrayList.getFirst()).get(1);
                     //path_k.get(path_k.size()-1).add(w1);
                 }
                 if (w1 < w_max) {
                     path_k.get(num).clear();
-                    path_k.get(num).addAll(integers);
+                    path_k.get(num).addAll(integerArrayList);
                     path_k.get(num).add(w1);
                 }
 
